chore: Support description in TileRadio

--- a/libs/frontend/ui/src/molecules/TileRadio/TileRadio.stories.mdx
+++ b/libs/frontend/ui/src/molecules/TileRadio/TileRadio.stories.mdx
@@ -16,6 +16,9 @@ import { PetsSharp } from '@material-ui/icons';
   <Story name="Tile Radio">
     <TileRadio title="Tile radio" />
   </Story>
+  <Story name="With description">
+    <TileRadio title="Tile radio" description="Lorem ipsum dolor sit amet du" />
+  </Story>
   <Story name="Checked">
     <TileRadio title="Checked" checked />
   </Story>
