chore: Rewrite dialogs

--- a/libs/frontend/ui/src/molecules/TileRadio/TileRadio.stories.mdx
+++ b/libs/frontend/ui/src/molecules/TileRadio/TileRadio.stories.mdx
@@ -1,6 +1,7 @@
 import { Canvas, Meta, Props, Story } from '@storybook/addon-docs/blocks';
 import { TileRadio } from './TileRadio';
-import { PetsSharp } from '@material-ui/icons';
+import { PetsSharp, Money, VerifiedUser } from '@material-ui/icons';
+import { Stack } from '@material-ui/core';
 
 <Meta title="UI/TileRadio" component={TileRadio} />
 
@@ -17,7 +18,23 @@ import { PetsSharp } from '@material-ui/icons';
     <TileRadio title="Tile radio" />
   </Story>
   <Story name="With description">
-    <TileRadio title="Tile radio" description="Lorem ipsum dolor sit amet du" />
+    <Stack direction="row" spacing={2}>
+      <TileRadio
+        icon={<VerifiedUser />}
+        height={300}
+        width={200}
+        title="Basic"
+        description="Lorem ipsum dolor sit amet du"
+      />
+      <TileRadio
+        height={300}
+        icon={<Money />}
+        width={200}
+        title="Premium"
+        checked
+        description="Lorem ipsum dolor sit amet du"
+      />
+    </Stack>
   </Story>
   <Story name="Checked">
     <TileRadio title="Checked" checked />
