chore(ui): Cleanup button components and stories

--- a/libs/frontend/ui/src/atoms/Emoji/Emoji.stories.mdx
+++ b/libs/frontend/ui/src/atoms/Emoji/Emoji.stories.mdx
@@ -2,7 +2,7 @@ import { ArgsTable, Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 import { Emoji } from './Emoji';
 import { Typography } from '@mui/material';
 
-<Meta title="UI/Emoji" component={Emoji} />
+<Meta title="Atoms/Emoji" component={Emoji} />
 
 # Emoji
 
