--- a/libs/frontend/ui/src/atoms/KeyHint/KeyHint.stories.mdx
+++ b/libs/frontend/ui/src/atoms/KeyHint/KeyHint.stories.mdx
@@ -1,7 +1,7 @@
 import { Props, Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 import { KeyHint } from './KeyHint';
 
-<Meta title="UI/KeyHint" component={KeyHint} />
+<Meta title="Atoms/KeyHint" component={KeyHint} />
 
 # KeyHint
 
