--- a/libs/frontend/ui/src/molecules/CollapsableCard/CollapsableCard.stories.mdx
+++ b/libs/frontend/ui/src/molecules/CollapsableCard/CollapsableCard.stories.mdx
@@ -2,7 +2,7 @@ import { Canvas, Meta, Props, Story } from '@storybook/addon-docs/blocks';
 import { CollapsableCard } from './CollapsableCard';
 import { Grid, TextField } from '@mui/material';
 
-<Meta title="UI/CollapsableCard" component={CollapsableCard} />
+<Meta title="Molecules/CollapsableCard" component={CollapsableCard} />
 
 # CollapsableCard
 
