--- a/libs/frontend/ui/src/molecules/ContextMenu/ContextMenu.stories.mdx
+++ b/libs/frontend/ui/src/molecules/ContextMenu/ContextMenu.stories.mdx
@@ -3,7 +3,7 @@ import { ContextMenu } from './ContextMenu';
 import { Box, Typography } from '@mui/material';
 import { action } from '@storybook/addon-actions';
 
-<Meta title="UI/ContextMenu" component={ContextMenu} />
+<Meta title="Molecules/ContextMenu" component={ContextMenu} />
 
 # ContextMenu
 
