--- a/libs/frontend/ui/src/molecules/Dropdown/Dropdown.stories.mdx
+++ b/libs/frontend/ui/src/molecules/Dropdown/Dropdown.stories.mdx
@@ -3,7 +3,7 @@ import { Dropdown } from './Dropdown';
 import { PlayArrowSharp } from '@mui/icons-material';
 import { Button } from '@mui/material';
 
-<Meta title="UI/Dropdown" component={Dropdown} />
+<Meta title="Molecules/Dropdown" component={Dropdown} />
 
 # Dropdown
 
