--- a/libs/frontend/ui/src/molecules/ErrorAlert/ErrorAlert.stories.mdx
+++ b/libs/frontend/ui/src/molecules/ErrorAlert/ErrorAlert.stories.mdx
@@ -1,7 +1,7 @@
 import { Canvas, Meta, Story, Props } from '@storybook/addon-docs/blocks';
 import { ErrorAlert } from './ErrorAlert';
 
-<Meta title="UI/ErrorAlert" component={ErrorAlert} />
+<Meta title="Molecules/ErrorAlert" component={ErrorAlert} />
 
 # ErrorAlert
 
