--- a/libs/frontend/ui/src/molecules/SelectablePaper/SelectablePaper.stories.mdx
+++ b/libs/frontend/ui/src/molecules/SelectablePaper/SelectablePaper.stories.mdx
@@ -3,7 +3,7 @@ import { SelectablePaper } from './SelectablePaper';
 import { Stack, Typography } from '@mui/material';
 import { PetsSharp } from '@mui/icons-material';
 
-<Meta title="UI/SelectablePaper" component={SelectablePaper} />
+<Meta title="Molecules/SelectablePaper" component={SelectablePaper} />
 
 # SelectablePaper
 
