--- a/libs/frontend/ui/src/molecules/SubmitButton/SubmitButton.stories.mdx
+++ b/libs/frontend/ui/src/molecules/SubmitButton/SubmitButton.stories.mdx
@@ -2,7 +2,7 @@ import { Canvas, Meta, Props, Story } from '@storybook/addon-docs/blocks';
 import { SubmitButton } from './SubmitButton';
 import { SaveSharp } from '@mui/icons-material';
 
-<Meta title="UI/SubmitButton" component={SubmitButton} />
+<Meta title="Molecules/SubmitButton" component={SubmitButton} />
 
 # SubmitButton
 
