--- a/libs/frontend/ui/src/molecules/TileCheckbox/TileCheckbox.stories.mdx
+++ b/libs/frontend/ui/src/molecules/TileCheckbox/TileCheckbox.stories.mdx
@@ -2,7 +2,7 @@ import { Props, Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 import { TileCheckbox } from './TileCheckbox';
 import { AirplaySharp } from '@mui/icons-material';
 
-<Meta title="UI/TileCheckbox" component={TileCheckbox} />
+<Meta title="Molecules/TileCheckbox" component={TileCheckbox} />
 
 # TileCheckbox
 
