--- a/libs/frontend/ui/src/molecules/TileRadio/TileRadio.stories.mdx
+++ b/libs/frontend/ui/src/molecules/TileRadio/TileRadio.stories.mdx
@@ -3,7 +3,7 @@ import { TileRadio } from './TileRadio';
 import { PetsSharp, Money, VerifiedUser } from '@mui/icons-material';
 import { Stack } from '@mui/material';
 
-<Meta title="UI/TileRadio" component={TileRadio} />
+<Meta title="Molecules/TileRadio" component={TileRadio} />
 
 # TileRadio
 
