--- a/libs/frontend/ui/src/molecules/Layout/Layout.stories.mdx
+++ b/libs/frontend/ui/src/molecules/Layout/Layout.stories.mdx
@@ -3,7 +3,7 @@ import { Layout } from './Layout';
 import { AppBar, Box, Toolbar, Typography } from '@mui/material';
 import * as faker from 'faker';
 
-<Meta title="UI/Layout" component={Layout} />
+<Meta title="Molecules/Layout" component={Layout} />
 
 # Layout
 
